--- a/src/content/graphos/org/sso/oidc-integration-guide.mdx
+++ b/src/content/graphos/org/sso/oidc-integration-guide.mdx
@@ -34,7 +34,7 @@ These steps generally require administrative access to your IdP.
 2. Create a new application in your SSO environment. While doing so, set the following values:
 
    - **App Name**: `Apollo GraphOS`
-   - **App logo**: [Apollo logo](../../img/sso/apollo-sk-logo.png) (optional)
+   - **Logo**: [Apollo logo](../../img/sso/apollo-sk-logo.png) (optional)
 
 3. Retrieve the following values from your SSO provider and save them in a local text file:
 
@@ -57,6 +57,4 @@ They will then be able to complete your SSO setup.
 
 Once your SSO setup is live, assign users to your new Apollo GraphOS application in your IdP. For help assigning the relevant groups and users, contact your SSO or Identity & Access Management team.
 
-<SSOLegacyUsers />
-
-Once you've confirmed the new setup works as expected, remove any legacy Apollo GraphOS applications in your IdP.
+<SSONewUsers />
