--- a/src/content/shared/sso-migration-notice.mdx
+++ b/src/content/shared/sso-migration-notice.mdx
@@ -7,7 +7,7 @@ If your organization's SSO was set up before April 2024, you must create a new S
 </Caution>
 
 To migrate from a legacy configuration, a GraphOS [Org Admin](/graphos/org/members/#organization-wide-member-roles) must create a new SSO configuration.
-You can create a new configuration while the legacy configuration continues to provide access to your organization.
+You can create a new configuration while the legacy configuration continues to provide SSO for your organization.
 The GraphOS setup wizard won't let you activate your new configuration until it has confirmed that you're able to sign in with it.
 
 Once the new configuration is verified and active, you should remove any legacy configurations from your identity provider (IdP).
