--- a/src/content/graphos/org/sso/self-service/migration.mdx
+++ b/src/content/graphos/org/sso/self-service/migration.mdx
@@ -40,7 +40,7 @@ If you aren't sure whether you need to migrate, please reach out to your Apollo 
 ## How to migrate
 
 A GraphOS [Org Admin](/graphos/org/members/#organization-wide-member-roles) must create a new SSO configuration.
-You can create a new configuration while the legacy configuration continues to provide access to your organization.
+You can create a new configuration while the legacy configuration continues to provide SSO for your organization.
 The GraphOS setup wizard won't let you activate your new configuration until it has confirmed that you're able to sign in with it.
 
 Once the new configuration is verified and active, you should remove any legacy configurations from your identity provider (IdP). For details, see the instructions for your IdP:
