--- a/src/content/shared/sso-migration-notice.mdx
+++ b/src/content/shared/sso-migration-notice.mdx
@@ -8,6 +8,15 @@ If your organization's SSO was set up before April 2024, you must create a new S
 
 To migrate from a legacy configuration, a GraphOS [Org Admin](/graphos/org/members/#organization-wide-member-roles) must create a new SSO configuration.
 You can create a new configuration while the legacy configuration continues to provide SSO for your organization.
-The GraphOS setup wizard won't let you activate your new configuration until it has confirmed that you're able to sign in with it.
 
-Once the new configuration is verified and active, you should remove any legacy configurations from your identity provider (IdP).
+The GraphOS setup wizard takes you through the configuration process, step-by-step.
+It won't let you activate your new configuration until it has confirmed that you're able to sign in with it.
+
+<img
+  src="../graphos/img/sso/sso-verification.jpg"
+  alt="SSO Setup Wizard showing the verification step in GraphOS Studio"
+  className="screenshot"
+  width="600"
+/>
+
+Once the new configuration is verified and active, you should remove any legacy configurations from your IdP.
