--- a/src/content/basics/devtools/editor-plugins.mdx
+++ b/src/content/basics/devtools/editor-plugins.mdx
@@ -37,8 +37,8 @@ For the VS Code plugin to know how to find the schema, it needs to be linked to 
 ```js
 module.exports = {
   client: {
-    service: 'my-graphql-app'
-  }
+    service: "my-graphql-app",
+  },
 };
 ```
 
@@ -72,10 +72,10 @@ Sometimes it may make sense to link the editor to a locally running version of a
 module.exports = {
   client: {
     service: {
-      name: 'my-graphql-app',
-      url: 'http://localhost:4000/graphql'
-    }
-  }
+      name: "my-graphql-app",
+      url: "http://localhost:4000/graphql",
+    },
+  },
 };
 ```
 
@@ -90,10 +90,10 @@ Client side schema definitions can be spread throughout the client app project a
 ```js
 module.exports = {
   client: {
-    service: 'my-graphql-app',
-    includes: ['./src/**/*.js'],
-    excludes: ['**/__tests__/**']
-  }
+    service: "my-graphql-app",
+    includes: ["./src/**/*.js"],
+    excludes: ["**/__tests__/**"],
+  },
 };
 ```
 
