Rename/link sections

--- a/src/content/basics/devtools/editor-plugins.mdx
+++ b/src/content/basics/devtools/editor-plugins.mdx
@@ -43,7 +43,9 @@ module.exports = {
 };
 ```
 
-The `service` name here is the name of the graph you've created in [GraphOS Studio](https://studio.apollographql.com).
+The `service` name is the name of the graph you've created in [GraphOS Studio](https://studio.apollographql.com).
+
+See [additional configuration options](#apollo-config-options).
 
 ### Setting up the `.env` file
 
@@ -216,7 +218,9 @@ Sometimes errors will show up as a notification at the bottom of your editor. Ot
 
 If problems persist or the error messages are unhelpful, open an [issue](https://github.com/apollographql/vscode-graphql/issues) in the `vscode-graphql` repository.
 
-## Other configuration options
+## Apollo config options
+
+You can add these configurations to your [Apollo config file](#setting-up-an-apollo-config).
 
 ### `client.tagName`
 
