--- a/src/content/basics/devtools/editor-plugins.mdx
+++ b/src/content/basics/devtools/editor-plugins.mdx
@@ -45,7 +45,7 @@ module.exports = {
 
 The `service` name is the name of the graph you've created in [GraphOS Studio](https://studio.apollographql.com).
 
-See [additional configuration options](#apollo-config-options).
+See [additional configuration options](#additional-apollo-config-options).
 
 ### Setting up the `.env` file
 
@@ -218,7 +218,7 @@ Sometimes errors will show up as a notification at the bottom of your editor. Ot
 
 If problems persist or the error messages are unhelpful, open an [issue](https://github.com/apollographql/vscode-graphql/issues) in the `vscode-graphql` repository.
 
-## Apollo config options
+## Additional Apollo config options
 
 You can add these configurations to your [Apollo config file](#setting-up-an-apollo-config).
 
